--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,32 @@
 include requirements.txt
-include wce_triage/setup/patches/etc/grub.d/10_linux
-include wce_triage/setup/patches/etc/pulse/default.pa.diff
-include wce_triage/setup/patches/etc/lighttpd/lighttpd.diff
-include wce_triage/setup/patches/etc/initramfs-tools/modules.diff
-include wce_triage/setup/patches/etc/initramfs-tools/scripts/init-bottom/__rootaufs
-include wce_triage/setup/patches/home/triage/Makefile
+include wce_triage/setup/patches/desktop/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/desktop/home/wce/Makefile
+include wce_triage/setup/patches/server/etc/dnsmasq.conf
+include wce_triage/setup/patches/server/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/server/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/server/etc/exports
+include wce_triage/setup/patches/server/etc/default/grub
+include wce_triage/setup/patches/server/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/server/etc/grub.d/40_custom
+include wce_triage/setup/patches/server/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/server/etc/inetd.conf
+include wce_triage/setup/patches/server/home/triage/Makefile
+include wce_triage/setup/patches/server/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/server/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/workstation/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/workstation/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/workstation/etc/default/grub
+include wce_triage/setup/patches/workstation/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/workstation/etc/grub.d/40_custom
+include wce_triage/setup/patches/workstation/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/workstation/home/wce/Makefile
+include wce_triage/setup/patches/workstation/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/triage/etc/pulse/default.pa.diff
+include wce_triage/setup/patches/triage/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/triage/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/triage/etc/default/grub
+include wce_triage/setup/patches/triage/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/triage/etc/grub.d/40_custom
+include wce_triage/setup/patches/triage/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/triage/home/triage/Makefile
