--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include requirements.txt
+include wce_triage/setup/patches/common/etc/modprobe.d/iwlwifi.conf.diff
+include wce_triage/setup/patches/common/etc/modprobe.d/iwlwifi.conf.diff~
 include wce_triage/setup/patches/desktop/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/desktop/home/wce/Makefile
 include wce_triage/setup/patches/server/etc/default/grub
