--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -37,3 +37,12 @@ include wce_triage/setup/patches/workstation/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/workstation/home/wce/Makefile
 include wce_triage/setup/patches/workstation/usr/local/bin/wce-disk-imaging
 include wce_triage/setup/patches/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/share/wce/wce-disk-images/lubuntu-18/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/network-server/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/test/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/triage/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/triage-x32/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/ubuntu-18/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/wce-16/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/wce-18/.disk_image_type.json
+include wce_triage/setup/share/wce/wce-disk-images/wce-lubuntu-18-x32/.disk_image_type.json
