Finally using google drive for UI download

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -5,7 +5,7 @@ update:
 	#-sudo -H pip3 uninstall wce_triage
 	sudo -H pip3 install --upgrade --no-cache-dir -i https://test.pypi.org/simple/ wce_triage
 	sudo rm -fr /usr/local/share/wce/wce-triage-ui/*
-	cd /usr/local/share/wce/wce-triage-ui && wget -q -O - http://release.cleanwinner.com/wce/wce-triage-ui.tgz | tar xzf -
+	cd /usr/local/share/wce/wce-triage-ui && curl -L -o - "https://drive.google.com/uc?export=download&id=1eNzcClc_rLebtwhR2KDfZbMA9c9W_P2Y" | tar xzf -
 	python3 -m wce_triage.setup.update_share
 
 clean:
