--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,12 @@
 include requirements.txt
+include Makefile
 include wce_triage/setup/patches/common/etc/modprobe.d/iwlwifi.conf.diff
+include wce_triage/setup/patches/common/etc/modprobe.d/iwlwifi.conf.diff~
 include wce_triage/setup/patches/desktop/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/desktop/home/wce/Makefile
+include wce_triage/setup/patches/desktop/usr/local/bin/#wce-kiwix-server#
+include wce_triage/setup/patches/desktop/usr/local/bin/wce-kiwix-server
+include wce_triage/setup/patches/desktop/usr/local/bin/wce-kiwix-server~
 include wce_triage/setup/patches/server/etc/default/grub
 include wce_triage/setup/patches/server/etc/dnsmasq.conf
 include wce_triage/setup/patches/server/etc/exports
@@ -37,6 +42,13 @@ include wce_triage/setup/patches/workstation/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/workstation/home/wce/Makefile
 include wce_triage/setup/patches/workstation/usr/local/bin/wce-disk-imaging
 include wce_triage/setup/patches/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/share/wce/bin/wce-kiwix-server
+include wce_triage/setup/share/wce/bin/wce-kiwix-wikipedia
+include wce_triage/setup/share/wce/bin/wce-live-triage.sh
+include wce_triage/setup/share/wce/lib/systemd/system/kiwix-server-proxy.service
+include wce_triage/setup/share/wce/lib/systemd/system/kiwix-server-proxy.socket
+include wce_triage/setup/share/wce/lib/systemd/system/kiwix-server.service
+include wce_triage/setup/share/wce/lib/systemd/system/kiwix-server.socket
 include wce_triage/setup/share/wce/wce-disk-images/lubuntu-18/.disk_image_type.json
 include wce_triage/setup/share/wce/wce-disk-images/network-server/.disk_image_type.json
 include wce_triage/setup/share/wce/wce-disk-images/test/.disk_image_type.json
