Installation Server walk-through for 22.04.

--- a/wce_triage/setup/patches/server/etc/dnsmasq.conf
+++ b/wce_triage/setup/patches/server/etc/dnsmasq.conf
@@ -1,8 +1,9 @@
-no-dhcp-interface=enx803f5d08c3a0
+no-dhcp-interface=enp6s0
 no-hosts
 expand-hosts
 no-resolv
-address=/wcesrv/10.3.2.1
+port=0
+address=/wceserve/10.3.2.1
 dhcp-range=10.3.2.100,10.3.2.199,2h
 dhcp-option=3,10.3.2.1
 dhcp-option=6,10.3.2.1
