--- a/wce_triage/setup/patches/server/etc/inetd.conf
+++ b/wce_triage/setup/patches/server/etc/inetd.conf
@@ -29,4 +29,4 @@
 
 #:BOOT: TFTP service is provided primarily for booting.  Most sites
 #       run this only on machines acting as "boot servers."
-tftp		dgram	udp	wait	nobody /usr/sbin/tcpd /usr/sbin/in.tftpd --tftpd-timeout 300 --retry-timeout 5 --mcast-port 1758 --mcast-addr 239.239.239.0-255 --mcast-ttl 1 --maxthread 100 --verbose=5 /var/lib/netboot
+tftp		dgram	udp	wait	nobody /usr/sbin/tcpd /usr/sbin/in.tftpd /var/lib/netboot
