--- a/wce_triage/setup/patches/server/etc/systemd/system/beeper.service
+++ b/wce_triage/setup/patches/server/etc/systemd/system/beeper.service
@@ -1,7 +1,7 @@
 [Unit]
 After=systemd-user-sessions.service plymouth-quit-wait.service
 After=rc-local.service
-Before=getty.target
+Requires=sound.target
 IgnoreOnIsolate=yes
 
 [Service]
