--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,44 +1,119 @@
 include requirements.txt
 include Makefile
-include wce_triage/setup/patches/common/etc/modprobe.d/iwlwifi.conf.diff
-include wce_triage/setup/patches/desktop/etc/lighttpd/lighttpd.conf.diff
-include wce_triage/setup/patches/desktop/home/wce/Makefile
-include wce_triage/setup/patches/desktop/usr/local/bin/wce-kiwix-server
-include wce_triage/setup/patches/server/etc/default/grub
-include wce_triage/setup/patches/server/etc/dnsmasq.conf
-include wce_triage/setup/patches/server/etc/exports
-include wce_triage/setup/patches/server/etc/grub.d/10_linux.diff
-include wce_triage/setup/patches/server/etc/grub.d/40_custom
-include wce_triage/setup/patches/server/etc/inetd.conf
-include wce_triage/setup/patches/server/etc/initramfs-tools/modules.diff
-include wce_triage/setup/patches/server/etc/initramfs-tools/scripts/init-bottom/__rootaufs
-include wce_triage/setup/patches/server/etc/lighttpd/lighttpd.conf.diff
-include wce_triage/setup/patches/server/etc/systemd/system/beeper.service
-include wce_triage/setup/patches/server/home/triage/Makefile
-include wce_triage/setup/patches/server/usr/local/bin/machine-is-down
-include wce_triage/setup/patches/server/usr/local/bin/machine-is-up
-include wce_triage/setup/patches/server/usr/local/bin/update-netclient
-include wce_triage/setup/patches/server/usr/local/bin/wce-disk-imaging
-include wce_triage/setup/patches/server/usr/local/bin/wce-triage.sh
-include wce_triage/setup/patches/server/var/lib/netboot/pxelinux.cfg/default
-include wce_triage/setup/patches/triage/etc/default/grub
-include wce_triage/setup/patches/triage/etc/grub.d/10_linux.diff
-include wce_triage/setup/patches/triage/etc/grub.d/40_custom
-include wce_triage/setup/patches/triage/etc/initramfs-tools/modules.diff
-include wce_triage/setup/patches/triage/etc/initramfs-tools/scripts/init-bottom/__rootaufs
-include wce_triage/setup/patches/triage/etc/lighttpd/lighttpd.conf.diff
-include wce_triage/setup/patches/triage/etc/pulse/default.pa.diff
-include wce_triage/setup/patches/triage/home/triage/Makefile
-include wce_triage/setup/patches/triage/home/triage/update-triage
-include wce_triage/setup/patches/workstation/etc/default/grub
-include wce_triage/setup/patches/workstation/etc/grub.d/10_linux.diff
-include wce_triage/setup/patches/workstation/etc/grub.d/40_custom
-include wce_triage/setup/patches/workstation/etc/initramfs-tools/modules.diff
-include wce_triage/setup/patches/workstation/etc/initramfs-tools/scripts/init-bottom/__rootaufs
-include wce_triage/setup/patches/workstation/etc/lighttpd/lighttpd.conf.diff
-include wce_triage/setup/patches/workstation/home/wce/Makefile
-include wce_triage/setup/patches/workstation/usr/local/bin/wce-disk-imaging
-include wce_triage/setup/patches/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/18.04/common/etc/modprobe.d/iwlwifi.conf.diff
+include wce_triage/setup/patches/18.04/desktop/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/18.04/desktop/home/wce/Makefile
+include wce_triage/setup/patches/18.04/desktop/usr/local/bin/wce-kiwix-server
+include wce_triage/setup/patches/18.04/server/etc/default/grub
+include wce_triage/setup/patches/18.04/server/etc/dnsmasq.conf
+include wce_triage/setup/patches/18.04/server/etc/exports
+include wce_triage/setup/patches/18.04/server/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/18.04/server/etc/grub.d/40_custom
+include wce_triage/setup/patches/18.04/server/etc/inetd.conf
+include wce_triage/setup/patches/18.04/server/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/18.04/server/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/18.04/server/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/18.04/server/etc/systemd/system/beeper.service
+include wce_triage/setup/patches/18.04/server/home/triage/Makefile
+include wce_triage/setup/patches/18.04/server/usr/local/bin/machine-is-down
+include wce_triage/setup/patches/18.04/server/usr/local/bin/machine-is-up
+include wce_triage/setup/patches/18.04/server/usr/local/bin/update-netclient
+include wce_triage/setup/patches/18.04/server/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/18.04/server/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/18.04/server/var/lib/netboot/pxelinux.cfg/default
+include wce_triage/setup/patches/18.04/triage/etc/default/grub
+include wce_triage/setup/patches/18.04/triage/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/18.04/triage/etc/grub.d/40_custom
+include wce_triage/setup/patches/18.04/triage/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/18.04/triage/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/18.04/triage/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/18.04/triage/etc/pulse/default.pa.diff
+include wce_triage/setup/patches/18.04/triage/home/triage/Makefile
+include wce_triage/setup/patches/18.04/triage/home/triage/update-triage
+include wce_triage/setup/patches/18.04/workstation/etc/default/grub
+include wce_triage/setup/patches/18.04/workstation/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/18.04/workstation/etc/grub.d/40_custom
+include wce_triage/setup/patches/18.04/workstation/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/18.04/workstation/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/18.04/workstation/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/18.04/workstation/home/wce/Makefile
+include wce_triage/setup/patches/18.04/workstation/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/18.04/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/20.04/common/etc/modprobe.d/iwlwifi.conf.diff
+include wce_triage/setup/patches/20.04/desktop/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/20.04/desktop/home/wce/Makefile
+include wce_triage/setup/patches/20.04/desktop/usr/local/bin/wce-kiwix-server
+include wce_triage/setup/patches/20.04/server/etc/default/grub
+include wce_triage/setup/patches/20.04/server/etc/dnsmasq.conf
+include wce_triage/setup/patches/20.04/server/etc/exports
+include wce_triage/setup/patches/20.04/server/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/20.04/server/etc/grub.d/40_custom
+include wce_triage/setup/patches/20.04/server/etc/inetd.conf
+include wce_triage/setup/patches/20.04/server/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/20.04/server/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/20.04/server/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/20.04/server/etc/systemd/system/beeper.service
+include wce_triage/setup/patches/20.04/server/home/triage/Makefile
+include wce_triage/setup/patches/20.04/server/usr/local/bin/machine-is-down
+include wce_triage/setup/patches/20.04/server/usr/local/bin/machine-is-up
+include wce_triage/setup/patches/20.04/server/usr/local/bin/update-netclient
+include wce_triage/setup/patches/20.04/server/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/20.04/server/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/20.04/server/var/lib/netboot/pxelinux.cfg/default
+include wce_triage/setup/patches/20.04/triage/etc/default/grub
+include wce_triage/setup/patches/20.04/triage/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/20.04/triage/etc/grub.d/40_custom
+include wce_triage/setup/patches/20.04/triage/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/20.04/triage/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/20.04/triage/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/20.04/triage/etc/pulse/default.pa.diff
+include wce_triage/setup/patches/20.04/triage/home/triage/Makefile
+include wce_triage/setup/patches/20.04/triage/home/triage/update-triage
+include wce_triage/setup/patches/20.04/workstation/etc/default/grub
+include wce_triage/setup/patches/20.04/workstation/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/20.04/workstation/etc/grub.d/40_custom
+include wce_triage/setup/patches/20.04/workstation/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/20.04/workstation/etc/initramfs-tools/scripts/init-bottom/__rootaufs
+include wce_triage/setup/patches/20.04/workstation/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/20.04/workstation/home/wce/Makefile
+include wce_triage/setup/patches/20.04/workstation/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/20.04/workstation/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/22.04/common/etc/modprobe.d/iwlwifi.conf.diff
+include wce_triage/setup/patches/22.04/desktop/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/22.04/desktop/home/wce/Makefile
+include wce_triage/setup/patches/22.04/desktop/usr/local/bin/wce-kiwix-server
+include wce_triage/setup/patches/22.04/server/etc/default/grub
+include wce_triage/setup/patches/22.04/server/etc/dnsmasq.conf
+include wce_triage/setup/patches/22.04/server/etc/exports
+include wce_triage/setup/patches/22.04/server/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/22.04/server/etc/grub.d/40_custom
+include wce_triage/setup/patches/22.04/server/etc/inetd.conf
+include wce_triage/setup/patches/22.04/server/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/22.04/server/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/22.04/server/etc/systemd/system/beeper.service
+include wce_triage/setup/patches/22.04/server/home/triage/Makefile
+include wce_triage/setup/patches/22.04/server/usr/local/bin/machine-is-down
+include wce_triage/setup/patches/22.04/server/usr/local/bin/machine-is-up
+include wce_triage/setup/patches/22.04/server/usr/local/bin/update-netclient
+include wce_triage/setup/patches/22.04/server/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/22.04/server/usr/local/bin/wce-triage.sh
+include wce_triage/setup/patches/22.04/server/var/lib/netboot/pxelinux.cfg/default
+include wce_triage/setup/patches/22.04/triage/etc/default/grub
+include wce_triage/setup/patches/22.04/triage/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/22.04/triage/etc/grub.d/40_custom
+include wce_triage/setup/patches/22.04/triage/etc/initramfs-tools/scripts/init-bottom/__rootovfs~
+include wce_triage/setup/patches/22.04/triage/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/22.04/triage/etc/pulse/default.pa.diff
+include wce_triage/setup/patches/22.04/triage/home/triage/Makefile
+include wce_triage/setup/patches/22.04/triage/home/triage/update-triage
+include wce_triage/setup/patches/22.04/workstation/etc/default/grub
+include wce_triage/setup/patches/22.04/workstation/etc/grub.d/10_linux.diff
+include wce_triage/setup/patches/22.04/workstation/etc/grub.d/40_custom
+include wce_triage/setup/patches/22.04/workstation/etc/initramfs-tools/modules.diff
+include wce_triage/setup/patches/22.04/workstation/etc/lighttpd/lighttpd.conf.diff
+include wce_triage/setup/patches/22.04/workstation/home/wce/Makefile
+include wce_triage/setup/patches/22.04/workstation/usr/local/bin/wce-disk-imaging
+include wce_triage/setup/patches/22.04/workstation/usr/local/bin/wce-triage.sh
 include wce_triage/setup/share/wce/bin/wce-kiwix-server
 include wce_triage/setup/share/wce/bin/wce-kiwix-wikipedia
 include wce_triage/setup/share/wce/bin/wce-live-triage.sh
