Battery/power detection added. Sound ie working on a laptop.

--- a/requirements.backend.txt
+++ b/requirements.backend.txt
@@ -1,4 +1,19 @@
-flask
-flask_cors
-flask_socketio
-
+async-timeout==3.0.1
+attrs==22.2.0
+bidict==0.22.1
+chardet==3.0.4
+click==8.1.3
+Flask==2.2.3
+Flask-CLI==0.4.0
+Flask-Cors==3.0.10
+Flask-SocketIO==5.3.3
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+multidict==4.7.6
+python-engineio==4.4.0
+python-socketio==5.6.0
+six==1.16.0
+Werkzeug==2.2.3
+yarl==1.8.2
