--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -92,6 +92,7 @@ include wce_triage/setup/patches/22.04/server/etc/initramfs-tools/modules.diff
 include wce_triage/setup/patches/22.04/server/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/22.04/server/etc/systemd/system/beeper.service
 include wce_triage/setup/patches/22.04/server/home/triage/Makefile
+include wce_triage/setup/patches/22.04/server/lib/systemd/system/systemd-networkd-wait-online.service.diff
 include wce_triage/setup/patches/22.04/server/usr/local/bin/machine-is-down
 include wce_triage/setup/patches/22.04/server/usr/local/bin/machine-is-up
 include wce_triage/setup/patches/22.04/server/usr/local/bin/update-netclient
@@ -101,7 +102,6 @@ include wce_triage/setup/patches/22.04/server/var/lib/netboot/pxelinux.cfg/defau
 include wce_triage/setup/patches/22.04/triage/etc/default/grub
 include wce_triage/setup/patches/22.04/triage/etc/grub.d/10_linux.diff
 include wce_triage/setup/patches/22.04/triage/etc/grub.d/40_custom
-include wce_triage/setup/patches/22.04/triage/etc/initramfs-tools/scripts/init-bottom/__rootovfs~
 include wce_triage/setup/patches/22.04/triage/etc/lighttpd/lighttpd.conf.diff
 include wce_triage/setup/patches/22.04/triage/etc/pulse/default.pa.diff
 include wce_triage/setup/patches/22.04/triage/home/triage/Makefile
