--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,49 @@
 aiohttp==3.6.2
 aiohttp-cors==0.7.0
+async-timeout==3.0.1
+attrs==22.2.0
+bidict==0.22.1
+blinker==1.7.0
+certifi==2023.11.17
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.3.2
+click==8.1.3
+cryptography==41.0.7
+docutils==0.20.1
+Flask==3.0.0
+Flask-CLI==0.4.0
+Flask-Cors==3.0.10
+Flask-SocketIO==5.3.3
+idna==3.4
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+jaraco.classes==3.3.0
+jeepney==0.8.0
+Jinja2==3.1.2
+keyring==24.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+more-itertools==10.1.0
+multidict==4.7.6
+nh3==0.2.15
+pkginfo==1.9.6
+pycparser==2.21
+Pygments==2.17.2
+python-engineio==4.4.0
 python-socketio==5.6.0
+readme-renderer==42.0
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.0
+SecretStorage==3.3.3
+six==1.16.0
+twine==4.0.2
+typing_extensions==4.9.0
+urllib3==2.1.0
+Werkzeug==3.0.1
+yarl==1.8.2
+zipp==3.17.0
