--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,17 @@ chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.3
 cryptography==41.0.7
+dnspython==2.4.2
 docutils==0.20.1
+eventlet==0.34.2
 Flask==3.0.0
 Flask-CLI==0.4.0
 Flask-Cors==3.0.10
 Flask-SocketIO==5.3.3
+gevent==23.9.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+h11==0.14.0
 idna==3.4
 importlib-metadata==7.0.1
 importlib-resources==6.1.1
@@ -32,18 +38,22 @@ nh3==0.2.15
 pkginfo==1.9.6
 pycparser==2.21
 Pygments==2.17.2
-python-engineio==4.4.0
-python-socketio==5.6.0
+python-engineio==4.8.1
+python-socketio==5.10.0
 readme-renderer==42.0
 requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.0
 SecretStorage==3.3.3
+simple-websocket==1.0.0
 six==1.16.0
 twine==4.0.2
 typing_extensions==4.9.0
 urllib3==2.1.0
 Werkzeug==3.0.1
+wsproto==1.2.0
 yarl==1.8.2
 zipp==3.17.0
+zope.event==5.0
+zope.interface==6.1
