--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.0
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
 SecretStorage==3.3.3
 simple-websocket==1.0.0
 six==1.16.0
