--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,63 @@
-annotated-types==0.6.0
-anyio==3.7.1
-arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@45c557e75bc6b645dded63811770b87c405bda3e
-astroid==3.1.0
-bleach==6.1.0
+aiohttp==3.6.2
+aiohttp-cors==0.7.0
+async-timeout==3.0.1
+attrs==22.2.0
+bidict==0.22.1
 blinker==1.7.0
-boto3==1.34.66
-botocore==1.34.66
-build==1.1.1
-CacheControl==0.14.0
-cachetools==5.3.3
-certifi==2024.2.2
+certifi==2023.11.17
 cffi==1.16.0
-chardet==5.2.0
+chardet==3.0.4
 charset-normalizer==3.3.2
-cleo==2.1.0
 click==8.1.7
-crashtest==0.4.1
-cryptography==42.0.5
-decorator==5.1.1
-Deprecated==1.2.14
-dill==0.3.8
-distlib==0.3.8
-dulwich==0.21.7
-fastapi==0.104.1
-fastjsonschema==2.19.1
-filelock==3.13.1
-Flask==3.0.2
+cryptography==41.0.7
+dnspython==2.4.2
+docutils==0.20.1
+eventlet==0.34.2
+Flask==3.0.0
 Flask-CLI==0.4.0
-Flask-S3==0.3.3
-google-api-core==2.17.1
-google-auth==2.28.2
-google-cloud==0.34.0
-google-cloud-core==2.4.1
-google-cloud-run==0.10.5
-google-cloud-storage==2.16.0
-google-crc32c==1.5.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-granian==1.2.0
-grpc-google-iam-v1==0.13.0
-grpcio==1.62.1
-grpcio-status==1.62.1
+Flask-Cors==3.0.10
+Flask-SocketIO==5.3.3
+gevent==23.9.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
-httptools==0.6.1
-idna==3.6
+idna==3.4
 importlib-metadata==7.0.1
-iniconfig==2.0.0
-installer==0.7.0
-isort==5.13.2
+importlib-resources==6.1.1
 itsdangerous==2.1.2
-jaraco.classes==3.3.1
+jaraco.classes==3.3.0
 jeepney==0.8.0
-Jinja2==3.1.3
-jmespath==1.0.1
-keyring==24.3.1
-lxml==5.1.0
-MarkupSafe==2.1.5
-mccabe==0.7.0
-more-itertools==10.2.0
-msgpack==1.0.8
-mypy==1.9.0
-mypy-extensions==1.0.0
+Jinja2==3.1.2
+keyring==24.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+more-itertools==10.1.0
+multidict==4.7.6
+nh3==0.2.15
 packaging==24.0
-pexpect==4.9.0
-pikepdf==8.13.0
-pillow==10.2.0
-pkginfo==1.10.0
-platformdirs==4.2.0
-pluggy==1.4.0
-poetry==1.8.2
-poetry-core==1.9.0
-poetry-plugin-export==1.6.0
-proto-plus==1.23.0
-protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-py==1.11.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
+pkginfo==1.9.6
 pycparser==2.21
-pydantic==2.6.4
-pydantic_core==2.16.3
-pylint==3.1.0
-pyproject_hooks==1.0.0
-pytest==7.4.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-multipart==0.0.6
-pytz==2024.1
-PyYAML==6.0.1
-rapidfuzz==3.6.2
-reportlab==4.1.0
+Pygments==2.17.2
+python-engineio==4.8.1
+python-socketio==5.10.0
+readme-renderer==42.0
 requests==2.31.0
 requests-toolbelt==1.0.0
-retry==0.9.2
-rsa==4.9
-ruamel.yaml==0.18.6
+rfc3986==2.0.0
+rich==13.7.0
+ruamel.yaml==0.18.5
 ruamel.yaml.clib==0.2.8
-s3transfer==0.10.1
 SecretStorage==3.3.3
-semantic-version==2.10.0
-shellingham==1.5.4
+simple-websocket==1.0.0
 six==1.16.0
-sniffio==1.3.1
-starlette==0.27.0
-tomlkit==0.12.4
-trove-classifiers==2024.3.3
-typer==0.9.0
-types-requests==2.31.0.20240311
-typing_extensions==4.10.0
-urllib3==2.2.1
-uvicorn==0.23.2
-uvloop==0.18.0
-virtualenv==20.25.1
-watchfiles==0.21.0
-webencodings==0.5.1
-websockets==12.0
+twine==4.0.2
+typing_extensions==4.9.0
+urllib3==2.1.0
 Werkzeug==3.0.1
-wrapt==1.16.0
-WTForms==3.1.2
+wsproto==1.2.0
+yarl==1.8.2
 zipp==3.17.0
+zope.event==5.0
+zope.interface==6.1
