--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 python-socketio = {extras = ["asyncio"], version = "^5.11.2"}
 typing-extensions = "^4.10.0"
+ruamel-yaml = "^0.18.6"
 
 
 [build-system]
