--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,12 @@ uvicorn = "^0.29.0"
 python-socketio = {extras = ["asyncio"], version = "^5.11.2"}
 typing-extensions = "^4.10.0"
 ruamel-yaml = "^0.18.6"
+aiohttp = "^3.9.4"
+aiohttp-cors = "^0.7.0"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core"]
